# json-book

./: Cargo.toml  LICENSE  README.md  schema.json
examples/: deserialize.rs  deserialize_fb2.rs
src/: fb2.rs  lib.rs
tests/: validate_example.rs  validate_fb2.rs  validate_schema.rs  validate_serialized.rs
