[package]
name = "json-book"
version = "0.1.0"
authors = ["Руслан Глазков <glazkov@skiff.com>"]
description = "Book format optimized for small screens, an alternaive for the XML-based FB2"
readme = "README.md"
homepage = "https://github.com/r-glazkov/json-book"
repository = "https://github.com/r-glazkov/json-book"
keywords = ["book", "book-format", "json-book", "fb2"]
categories = ["parser-implementations"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fb2 = { version = "0.4", optional = true }
language-tags = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
boon = "0.5"
quick-xml = { version = "0.30", features = ["serialize"] }
serde_json = "1"

[features]
fb2 = ["dep:fb2"]
